Change single quotes to double quotes for Supabase keys

--- a/index.html
+++ b/index.html
@@ -390,8 +390,8 @@
 
     // ===== CONFIG =====
     // Замените эти значения на свои
-    const SUPABASE_URL = 'https://tzsqgwupguttgsuhbknb.supabase.co';
-    const SUPABASE_ANON_KEY = 'sb_publishable_nB-DBmdfeDkjqPLQeuSxrw_mE-p30aO';
+    const SUPABASE_URL = "https://tzsqgwupguttgsuhbknb.supabase.co";
+    const SUPABASE_ANON_KEY = "sb_publishable_nB-DBmdfeDkjqPLQeuSxrw_mE-p30aO";
 
     // безопасно инициализируем supabase — если CDN не загрузился, не ломаем UI
     const createClient = window.supabase?.createClient || (window.Supabase && window.Supabase.createClient);
