--- a/index.html
+++ b/index.html
@@ -486,18 +486,22 @@
     }
 
     // Listen auth changes (only if supabase client доступен)
-    supabaseClient.auth.onAuthStateChange(async (_event, session) => {
-  currentUser = session?.user || null;
-
-  if (currentUser) {
-    await loadDataFromSupabase();
-    subscribeToUpdates();
-  } else {
-    state = { cards: [], categories: [], expenses: [], payments: [] };
-  }
-
-  renderAll();
-});
+    if (supabaseClient && supabaseClient.auth && typeof supabaseClient.auth.onAuthStateChange === 'function') {
+      supabaseClient.auth.onAuthStateChange((event, session) => {
+        currentUser = session?.user || null;
+        renderUserArea();
+        if (currentUser) {
+          loadDataFromSupabase().then(()=>{ renderAll(); subscribeToUpdates(); });
+        } else {
+          state = { cards: [], categories: [], expenses: [], payments: [] };
+          renderAll();
+        }
+      });
+    } else {
+      // fallback: no supabase — оставим приложение в гостевом режиме (UI работает, но данные пусты)
+      currentUser = null;
+      renderUserArea();
+    }
 
     // ===== DB helpers =====
     async function loadDataFromSupabase(){
@@ -535,44 +539,23 @@
       });
     }
 
-   async function dbInsert(table, data){
-  const { data: res, error } = await supabaseClient
-    .from(table)
-    .insert([data])
-    .select()
-    .single();
-  if (error) throw error;
-  return res;
-}
+    async function dbInsert(table, data){
+      if (!supabaseClient || !currentUser) throw new Error('No supabase or user');
+      const payload = { ...data, user_id: currentUser.id };
+      const { data: res, error } = await supabaseClient.from(table).insert([payload]).select().single();
+      if (error) { alert('Ошибка сохранения: ' + error.message); throw error; }
+      return res;
     }
     async function dbUpdate(table, id, data){
-  if (!supabaseClient || !currentUser)
-    throw new Error('No supabase or user');
-
-  const { error } = await supabaseClient
-    .from(table)
-    .update(data)
-    .eq('id', id);
-
-  if (error) {
-    alert('Ошибка обновления: ' + error.message);
-    throw error;
-  }
-}
+      if (!supabaseClient || !currentUser) throw new Error('No supabase or user');
+      const { error } = await supabaseClient.from(table).update(data).eq('id', id).eq('user_id', currentUser.id);
+      if (error) { alert('Ошибка обновления: ' + error.message); throw error; }
+    }
     async function dbDelete(table, id){
-  if (!supabaseClient || !currentUser)
-    throw new Error('No supabase or user');
-
-  const { error } = await supabaseClient
-    .from(table)
-    .delete()
-    .eq('id', id);
-
-  if (error) {
-    alert('Ошибка удаления: ' + error.message);
-    throw error;
-  }
-}
+      if (!supabaseClient || !currentUser) throw new Error('No supabase or user');
+      const { error } = await supabaseClient.from(table).delete().eq('id', id).eq('user_id', currentUser.id);
+      if (error) { alert('Ошибка удаления: ' + error.message); throw error; }
+    }
 
     // ===== AUTH MODAL UI =====
     const authOverlay = document.getElementById('auth-overlay');
@@ -828,15 +811,16 @@
         container.appendChild(row);
 
         const checkbox = row.querySelector('input[type="checkbox"]');
-checkbox.addEventListener('change', async ()=>{
-  const newPaid = checkbox.checked;
-  await dbUpdate('payments', p.id, { paid: newPaid });
-  // если баланс карт обрабатывается триггерами на сервере — не трогаем баланс в клиенте,
-  // иначе можно тут корректировать card.balance вручную (но это приведёт к дублированию).
-  await loadDataFromSupabase();
-  renderAll();
-});
-
+        checkbox.addEventListener('change', async ()=>{
+          const newPaid = checkbox.checked;
+          await dbUpdate('payments', p.id, { paid: newPaid });
+          if (newPaid && card){
+            await dbUpdate('cards', card.id, { balance: Number(card.balance || 0) - Number(p.amount || 0) });
+          } else if (!newPaid && card){
+            await dbUpdate('cards', card.id, { balance: Number(card.balance || 0) + Number(p.amount || 0) });
+          }
+          await loadDataFromSupabase(); renderAll();
+        });
 
         row.querySelectorAll('button').forEach(btn=>{
           btn.addEventListener('click', async ()=>{
@@ -896,7 +880,14 @@ checkbox.addEventListener('change', async ()=>{
       const note = document.getElementById('expense-note').value.trim();
       if (!amount || !card_id) return alert('Укажи сумму и карту');
       // decrease card balance
+      const card = state.cards.find(c=>c.id===card_id);
+      if (card){
+        const newBal = Number(card.balance || 0) - amount;
+        if (newBal < 0 && !confirm('Баланс карты станет отрицательным. Продолжить?')) return;
+        await dbUpdate('cards', card.id, { balance: newBal });
+      }
       await dbInsert('expenses', { amount, category_id, card_id, note, created_at: new Date().toISOString() });
+      await loadDataFromSupabase(); renderAll();
       document.getElementById('expense-amount').value=''; document.getElementById('expense-note').value=''; alert('Расход сохранён');
     });
 
@@ -908,7 +899,13 @@ checkbox.addEventListener('change', async ()=>{
       const card_id = document.getElementById('quick-card').value || null;
       if (!amount || !card_id) return alert('Укажи сумму и карту');
       const card = state.cards.find(c=>c.id===card_id);
+      if (card){
+        const newBal = Number(card.balance || 0) - amount;
+        if (newBal < 0 && !confirm('Баланс карты станет отрицательным. Продолжить?')) return;
+        await dbUpdate('cards', card.id, { balance: newBal });
+      }
       await dbInsert('expenses', { amount, category_id, card_id, note: 'Быстрая операция', created_at: new Date().toISOString() });
+      await loadDataFromSupabase(); renderAll();
       document.getElementById('quick-amount').value='';
     });
 
@@ -1002,19 +999,23 @@ checkbox.addEventListener('change', async ()=>{
 
     // Initial load: check session (safely)
     (async ()=>{
-  if (!supabaseClient) return renderAll();
-
-  const { data } = await supabaseClient.auth.getSession();
-  currentUser = data?.session?.user || null;
-
-  if (currentUser) {
-    await loadDataFromSupabase();
-    subscribeToUpdates();
-  }
-
-  renderAll();
-})();
-
+      try {
+        if (supabaseClient && supabaseClient.auth && typeof supabaseClient.auth.getSession === 'function'){
+          const { data } = await supabaseClient.auth.getSession();
+          currentUser = data?.session?.user || null;
+          if (currentUser) {
+            await loadDataFromSupabase();
+            subscribeToUpdates();
+          }
+        } else {
+          currentUser = null;
+        }
+      } catch(err){
+        console.warn('Supabase session check failed', err);
+        currentUser = null;
+      }
+      renderAll();
+    })();
 
     // UX helpers
     document.addEventListener('keydown', (e)=>{ if (e.key === 'N' || e.key === 'n') showTab('expenses'); if (e.key === 'C' || e.key === 'c') showTab('cards'); if (e.key === 'D' || e.key === 'd') showTab('dashboard'); });
