--- a/index.html
+++ b/index.html
@@ -54,8 +54,7 @@
     nav button{ display:flex; gap:12px; align-items:center; width:100%; background:transparent; border:0; color:inherit; padding:10px 12px; border-radius:10px; cursor:pointer; transition:all var(--trans); text-align:left; }
     nav button:hover{ background:var(--glass-2); transform:translateY(-2px); }
     nav button.active{ background:linear-gradient(90deg, rgba(124,58,237,0.12), rgba(6,182,212,0.04)); box-shadow:0 6px 18px rgba(2,6,23,0.6); }
-    <button class="btn" id="quick-add-income">Добавить доход</button>
-                                
+
     .sidebar .section-title{ color:var(--muted); font-size:12px; margin:14px 2px 4px; }
     .small{ font-size:12px; color:var(--muted); }
 
@@ -134,9 +133,10 @@
       </nav>
 
       <div class="section-title">Быстрые действия</div>
-      <div style="display:flex;gap:8px;margin-top:8px;">
+      <div style="display:flex;gap:8px;margin-top:8px; flex-wrap: wrap;">
         <button class="btn" id="quick-add-card">Добавить карту</button>
         <button class="btn" id="quick-add-expense">Добавить расход</button>
+        <button class="btn" id="quick-add-income">Добавить доход</button>
       </div>
 
       <div style="margin-top:18px;">
@@ -169,7 +169,7 @@
 
         <div style="display:flex;gap:12px; align-items:center;">
           <div class="card" style="min-width:220px;">
-            <div class="muted">Последние расходы</div>
+            <div class="muted">Последние операции</div>
             <div id="recent-list" style="margin-top:8px;"></div>
           </div>
         </div>
@@ -212,9 +212,9 @@
                   <select id="quick-card"></select>
                   <div style="display:flex; gap:8px;">
                     <button class="btn" id="quick-add-expense-2">Добавить расход</button>
-                    <button class="btn" id="open-expenses-tab">Открыть расходы</button>
+                    <button class="btn" id="quick-add-income-2">Добавить доход</button>
                   </div>
-                  <div class="muted">Быстро добавь расход — баланс карты уменьшится автоматически.</div>
+                  <div class="muted">Баланс карты изменится автоматически.</div>
                 </div>
               </div>
             </div>
@@ -341,57 +341,57 @@
           </div>
         </div>
 
+        <!-- INCOMES -->
+        <div id="tab-incomes-content" class="card" role="region" style="display:none;" tabindex="-1">
+          <h3 style="margin:0 0 12px 0;">Доходы</h3>
+          <div style="display:flex; gap:16px;">
+            <div style="flex:1;">
+              <div class="card">
+                <h4 style="margin:0 0 8px 0;">Добавить доход</h4>
+                <form id="form-add-income" class="form" onsubmit="return false;">
+                  <input id="income-amount" type="number" step="0.01" placeholder="Сумма" required />
+                  <select id="income-category" required>
+                    <option value="">Выберите категорию</option>
+                  </select>
+                  <select id="income-card" required></select>
+                  <input id="income-note" type="text" placeholder="Описание (необязательно)" />
+                  <div style="display:flex; gap:8px;">
+                    <button class="btn" id="save-income">Добавить</button>
+                    <button class="btn" id="clear-income">Очистить</button>
+                  </div>
+                  <div class="muted">При добавлении — баланс выбранной карты увеличится.</div>
+                </form>
+              </div>
+
+              <div class="card" style="margin-top:12px;">
+                <h4 style="margin:0 0 8px 0;">История доходов</h4>
+                <div id="incomes-list" class="list"></div>
+              </div>
+            </div>
+
+            <div style="width:360px;">
+              <div class="card">
+                <h4 style="margin:0 0 8px 0;">Фильтры</h4>
+                <div class="form">
+                  <select id="filter-income-card">
+                    <option value="">По всем картам</option>
+                  </select>
+                  <select id="filter-income-category">
+                    <option value="">По всем категориям</option>
+                  </select>
+                  <div style="display:flex; gap:8px;">
+                    <button class="btn" id="apply-income-filters">Применить</button>
+                    <button class="btn" id="reset-income-filters">Сброс</button>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+
       </section>
     </main>
   </div>
-
-  <!-- INCOMES -->
-<div id="tab-incomes-content" class="card" role="region" style="display:none;" tabindex="-1">
-  <h3 style="margin:0 0 12px 0;">Доходы</h3>
-  <div style="display:flex; gap:16px;">
-    <div style="flex:1;">
-      <div class="card">
-        <h4 style="margin:0 0 8px 0;">Добавить доход</h4>
-        <form id="form-add-income" class="form" onsubmit="return false;">
-          <input id="income-amount" type="number" step="0.01" placeholder="Сумма" required />
-          <select id="income-category" required>
-            <option value="">Выберите категорию</option>
-          </select>
-          <select id="income-card" required></select>
-          <input id="income-note" type="text" placeholder="Описание (необязательно)" />
-          <div style="display:flex; gap:8px;">
-            <button class="btn" id="save-income">Добавить</button>
-            <button class="btn" id="clear-income">Очистить</button>
-          </div>
-          <div class="muted">При добавлении — баланс выбранной карты увеличится.</div>
-        </form>
-      </div>
-
-      <div class="card" style="margin-top:12px;">
-        <h4 style="margin:0 0 8px 0;">История доходов</h4>
-        <div id="incomes-list" class="list"></div>
-      </div>
-    </div>
-
-    <div style="width:360px;">
-      <div class="card">
-        <h4 style="margin:0 0 8px 0;">Фильтры</h4>
-        <div class="form">
-          <select id="filter-income-card">
-            <option value="">По всем картам</option>
-          </select>
-          <select id="filter-income-category">
-            <option value="">По всем категориям</option>
-          </select>
-          <div style="display:flex; gap:8px;">
-            <button class="btn" id="apply-income-filters">Применить</button>
-            <button class="btn" id="reset-income-filters">Сброс</button>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-</div>
 
   <!-- AUTH MODAL -->
   <div class="overlay" id="auth-overlay" aria-hidden="true">
