--- a/index.html
+++ b/index.html
@@ -97,8 +97,8 @@
     .muted{ color:var(--muted); font-size:13px; }
 
     /* Auth modal */
-    .overlay{ position:fixed; inset:0; background:rgba(0,0,0,0.6); display:none; align-items:center; justify-content:center; z-index:50; }
-    .modal{ width:380px; border-radius:12px; padding:18px; background:linear-gradient(180deg, rgba(255,255,255,0.02), rgba(255,255,255,0.01)); box-shadow: 0 20px 60px rgba(2,6,23,0.7); }
+    .overlay{ position:fixed; inset:0; background:rgba(0,0,0,0.8); backdrop-filter: blur(5px); display:none; align-items:center; justify-content:center; z-index:50; }
+    .modal{ width:380px; border-radius:12px; padding:18px; background:linear-gradient(180deg, rgba(124,58,237,0.3), rgba(124,58,237,0.4)); box-shadow: 0 20px 60px rgba(2,6,23,0.7); }
     .tabs{ display:flex; gap:8px; margin-bottom:12px; }
     .tabs button{ flex:1; padding:8px; border-radius:8px; border:0; background:transparent; color:var(--muted); cursor:pointer; }
     .tabs button.active{ background:rgba(124,58,237,0.12); color:#eaf2ff; }
