--- a/index.html
+++ b/index.html
@@ -302,7 +302,7 @@
                   <div style="display:flex; gap:8px;">
                     <button class="btn" id="save-category">Добавить</button>
                   </div>
-                  <div class="muted">Категории используются в расходах и графиках.</div>
+                  <div class="muted">Категории используются в расходах, доходах и графиках.</div>
                 </form>
               </div>
             </div>
