--- a/index.html
+++ b/index.html
@@ -643,7 +643,7 @@ async function loginWithGoogle(){
     const { error } = await supabaseClient.auth.signInWithOAuth({
       provider: 'google',
       options: {
-        redirectTo: window.location.origin
+        redirectTo: window.location.origin + window.location.pathname
       }
     });
     
